--- a/index.css
+++ b/index.css
@@ -102,3 +102,21 @@ h1 {
   font-family: "Big Shoulders Stencil Text";
   color: rgb(105, 95, 95);
 }
+
+#loader {
+  border: 1.6rem solid white;
+  border-radius: 50%;
+  border-top: 1.6rem solid dodgerblue;
+  width: 12rem;
+  height: 12rem;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
